fixed brackets in links to twitch and yt

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -74,8 +74,8 @@ Past events:
 [suze]: https://twitter.com/SuzeShardlow
 
 <!-- Links to platforms -->
-[twitch]: [https://twitch.tv/redisinc]
-[yt]: [https://www.youtube.com/redisinc]
+[twitch]: https://twitch.tv/redisinc
+[yt]: https://www.youtube.com/redisinc
 
 <!-- Links to specific videos -->
 [1]: https://www.youtube.com/watch?v=ZP2j7bmWfmU
