--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -9,7 +9,7 @@ pagination_next: null
 pagination_prev: null
 ---
 
-[Hacktoberfest](https://hacktoberfest.digitalocean.com/) is a month-long online festival which takes place every year in October. It is sponsored by [DigitalOcean](https://www.digitalocean.com/) and aims to encourage people to get involved in open source projects.
+[Hacktoberfest](https://hacktoberfest.digitalocean.com/) is a month-long online festival which takes place every year in October. It is sponsored by [DigitalOcean](https://www.digitalocean.com/) and aims to encourage people to get involved in open source projects.  Hacktoberfest 2021 has now finished!
 
 <iframe
   width="560"
