--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -9,7 +9,7 @@ pagination_next: null
 pagination_prev: null
 ---
 
-[Hacktoberfest](https://hacktoberfest.digitalocean.com/) is a month-long online festival which takes place every year in October. It is sponsored by [DigitalOcean](https://www.digitalocean.com/) and aims to encourage people to get involved in open source projects.  Hacktoberfest 2021 has now finished!
+[Hacktoberfest](https://hacktoberfest.digitalocean.com/) is a month-long online festival which takes place every year in October. It is sponsored by [DigitalOcean](https://www.digitalocean.com/) and aims to encourage people to get involved in open source projects.  Hacktoberfest 2021 has now finished!  We've left the below information here so you can see how it worked and check out the recordings of our live streams.
 
 <iframe
   width="560"
