Adds the recording of the Suze / Lance fireside chat.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -102,6 +102,16 @@ Fireside 1:1 - Suze Shardlow with Rachel Elledge: Technical Writing Explained
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen></iframe>
 
+Fireside 1:1 - Suze Shardlow with Lance Leonard: Technical Writing Explained
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/SeK0OGF5dgE"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen></iframe>
+
 ## Contact us
 
 Hacktoberfest at Redis is brought to you by Suze Shardlow and Simon Prickett of the Redis Developer Relations team. [Contact us](mailto:redis.university@redis.com) if you have any questions that aren't addressed here. Please note that we are available during UK daytime.
