Amends the events section.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -66,11 +66,9 @@ Need help with one of our issues, or just want to chat with other contributors? 
 
 If you're looking for more repos to contribute to during Hacktoberfest, [check out the Hacktoberfest topic on GitHub](https://github.com/topics/hacktoberfest). **Redis is not responsible for the content of third party repositories.**
 
-## Join us on Twitch and YouTube
+## Learn more
 
 Documentation is often cited as a great way to get your feet wet with open source. So to demystify the world of technical writing, we have hosted four live events with our documentation team. Suze Shardlow, Developer Community Manager, sat down with Technical Writers Kaitlyn Michael, Rachel Elledge and Lance Leonard for a series of fireside chats.
-
-### Past event recordings
 
 Fireside panel - Suze Shardlow with the documentation team: Technical Writing Explained
 
