udpated schedule, some formatting, minor verbage change

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -8,7 +8,7 @@ custom_edit_url: null
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-Redis Live hosts a variety of live-streamed content on [Twitch][twitch] and occasionally [YouTube][yt]. Follow us to get notified when we go live. And, you know, like and subscribe.
+Redis Live hosts a variety of live-streamed content on [Twitch][twitch] and [YouTube][yt]. Follow us to get notified when we go live. And, you know, like and subscribe.
 
 <Tabs
    defaultValue="upcoming"
@@ -22,12 +22,16 @@ Redis Live hosts a variety of live-streamed content on [Twitch][twitch] and occa
 
 Check out our upcoming events:
 
-|        Date        |    Time     | Streamers                                             | Show                                                    |
-| :----------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
-| Wednesday, July 13 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
-|  Thursday, July 14 | 3:00 PM UTC | [Simon Prickett][simon]                               | Introduction to Redis Streams with RedisInsight         |
-|  Friday, July 15   | 6:00 PM UTC | [Brian Sam-Bodden][bsb], [Guy Royse][guy]             | Extending Redis with Rust                               |
-|  Friday, July 22   | 6:00 PM UTC | [Brian Sam-Bodden][bsb], [Guy Royse][guy]             | Extending Redis with Rust                               |
+|        Date          |    Time     | Streamers                                             | Show                                                    |
+| :------------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
+|   Friday, July 15    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
+|  Wednesday, July 20  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
+|   Friday, July 22    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
+|  Wednesday, July 27  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
+|   Friday, July 29    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
+| Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
+| Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
+|  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
 
   </TabItem>
   <TabItem value="recurring">
@@ -44,22 +48,24 @@ Sometimes we're on the road speaking at in-person events or enjoying a well dese
 
 Past events:
 
-|        Date        |    Time     | Streamers                                             | Show                                                    |
-| :----------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
-|   Friday, July 8   | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                 |
-| Thursday, July 7   | 2:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU202 Redis Streams Course      |
-| Wednesday, July 6  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET                            |
-| Thursday, June 30  | 6:00 PM UTC | [Savannah Norem][norem], [Guy Royse][guy]             | Comparing Sets, Bloom Filters, and Cuckoo Filters       |
-| Wednesday, June 29 | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET!                           |
-|  Tuesday, June 28  | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102J Redis University Course  |
-|  Friday, June 24   | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                 |
-| Thursday, June 23  | 6:00 PM UTC | [Justin Castilla][justin], [Savannah Norem][norem]    | [Redis OM: Python + JSON + Search][1]                   |
-| Thursday, June 16  | 3:00 PM UTC | [Simon Prickett][simon], [Justin Castilla][justin]    | [Counting Things At Scale with Redis][2]                |
-| Wednesday, June 15 | 5:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102JS Redis University Course |
-| Wednesday, June 15 | 4:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102PY Redis University Course |
-|  Friday, June 10   | 6:00 PM UTC | [Guy Royse][guy]                                      | Working on Redis OM for Node.js                         |
-|  Friday, June 10   | 3:00 PM UTC | [Justin Castilla][justin], [Suze Shardlow][suze]      | Working with Redis Data Structures                      |
-|   Friday, June 3   | 6:00 PM UTC | [Guy Royse][guy]                                      | Tracking Aircraft with Redis + Software-Defined Radio   |
+|        Date          |    Time     | Streamers                                             | Show                                                    |
+| :------------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
+|  Thursday, July 14   | 3:00 PM UTC | [Simon Prickett][simon]                               | Introduction to Redis Streams with RedisInsight         |
+|  Wednesday, July 13  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
+|    Friday, July 8    | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                 |
+|   Thursday, July 7   | 2:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU202 Redis Streams Course      |
+|  Wednesday, July 6   | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET                            |
+|  Thursday, June 30   | 6:00 PM UTC | [Savannah Norem][norem], [Guy Royse][guy]             | Comparing Sets, Bloom Filters, and Cuckoo Filters       |
+|  Wednesday, June 29  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET!                           |
+|   Tuesday, June 28   | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102J Redis University Course  |
+|   Friday, June 24    | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                 |
+|  Thursday, June 23   | 6:00 PM UTC | [Justin Castilla][justin], [Savannah Norem][norem]    | [Redis OM: Python + JSON + Search][2]                   |
+|  Thursday, June 16   | 3:00 PM UTC | [Simon Prickett][simon], [Justin Castilla][justin]    | [Counting Things At Scale with Redis][1]                |
+|  Wednesday, June 15  | 5:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102JS Redis University Course |
+|  Wednesday, June 15  | 4:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102PY Redis University Course |
+|   Friday, June 10    | 6:00 PM UTC | [Guy Royse][guy]                                      | Working on Redis OM for Node.js                         |
+|   Friday, June 10    | 3:00 PM UTC | [Justin Castilla][justin], [Suze Shardlow][suze]      | Working with Redis Data Structures                      |
+|    Friday, June 3    | 6:00 PM UTC | [Guy Royse][guy]                                      | Tracking Aircraft with Redis + Software-Defined Radio   |
 
   </TabItem>
 </Tabs>
@@ -78,5 +84,5 @@ Past events:
 [yt]: https://www.youtube.com/redisinc
 
 <!-- Links to specific videos -->
-[1]: https://www.youtube.com/watch?v=ZP2j7bmWfmU
-[2]: https://www.youtube.com/watch?v=FAJXq5Qqc0Y
+[2]: https://www.youtube.com/watch?v=ZP2j7bmWfmU
+[1]: https://www.youtube.com/watch?v=FAJXq5Qqc0Y
