Removed Elastic UI closes #362

--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -17,7 +17,7 @@ RedisInsight is a visual tool that lets you do both GUI- and CLI-based interacti
 
 ## What's New in RedisInsight v2.0?
 
-RedisInsight v2.0 is a complete product rewrite based on a new tech stack comprising of [Electron](https://www.electronjs.org/), [Elastic UI](https://elastic.github.io/eui/#/), [Monaco Editor](https://microsoft.github.io/monaco-editor/) and [NodeJS](https://nodejs.org). This version contains a number of must-have and most-used capabilities from previous releases, plus a number of differentiators and delighters. You can run the application locally along with your favorite IDE, and it remains cross-platform, supported on Linux, Windows, and MacOS.
+RedisInsight v2.0 is a complete product rewrite based on a new tech stack comprising of [Electron](https://www.electronjs.org/), [Monaco Editor](https://microsoft.github.io/monaco-editor/) and [NodeJS](https://nodejs.org). This version contains a number of must-have and most-used capabilities from previous releases, plus a number of differentiators and delighters. You can run the application locally along with your favorite IDE, and it remains cross-platform, supported on Linux, Windows, and MacOS.
 
 <div class="text--center">
   <iframe
