--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -22,16 +22,16 @@ Redis Live hosts a variety of live-streamed content on [Twitch][twitch] and [You
 
 Check out our upcoming events:
 
-|        Date          |    Time     | Streamers                                             | Show                                                    |
-| :------------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
-|   Friday, July 15    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
-|  Wednesday, July 20  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
-|   Friday, July 22    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
-|  Wednesday, July 27  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
-|   Friday, July 29    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
-| Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
-| Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
-|  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
+|        Date          |    Time     | Streamers                                             | Show                                                               |
+| :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
+|  Wednesday, July 20  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
+|   Friday, July 22    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
+|  Wednesday, July 27  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
+|   Thursday, July 28  | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with RU203: Querying, Indexing and Full-Text Search |
+|   Friday, July 29    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
+| Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
+| Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
+|  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
 
   </TabItem>
   <TabItem value="recurring">
@@ -50,6 +50,7 @@ Past events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                    |
 | :------------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
+|   Friday, July 15    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
 |  Thursday, July 14   | 3:00 PM UTC | [Simon Prickett][simon]                               | Introduction to Redis Streams with RedisInsight         |
 |  Wednesday, July 13  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
 |    Friday, July 8    | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                 |
