--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,12 +24,15 @@ Check out our upcoming events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                               |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
-|  Wednesday, July 20  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
+|  Wednesday, July 20  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                                       |
 |   Friday, July 22    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
-|  Wednesday, July 27  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
-|   Thursday, July 28  | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with RU203: Querying, Indexing and Full-Text Search |
+|   Tuesday, July 26   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
+|  Wednesday, July 27  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on cli.redis.io                                        |
+|  Thursday, July 28   | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with RU203: Querying, Indexing and Full-Text Search |
 |   Friday, July 29    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
+|  Tuesday, August 2   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
+|  Tuesday, August 9   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
 |  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
 
@@ -38,10 +41,11 @@ Check out our upcoming events:
 
 Sometimes we're on the road speaking at in-person events or enjoying a well deserved vacation. But when we're not, here's our weekly streaming schedule:
 
-|    Day    |    Time    | Streamers              | Show                                                             |
-| :-------: | :--------: | :--------------------- | :--------------------------------------------------------------- |
-| Wednesday | 2:00 PM ET | [Steve Lorello][steve] | [Coding with Steve][twitch]                                      |
-|  Friday   | 2:00 PM ET | [Guy Royse][guy]       | [Web, Whimsy, and Redis Stack: Random Projects with Guy][twitch] |
+|    Day    |    Time    | Streamers               | Show                                                             |
+| :-------: | :--------: | :---------------------- | :--------------------------------------------------------------- |
+|  Tuesday  | 2:00 PM ET | [Savannah Norem][norem] | [savannah_streams_in_snake_case][twitch]                         |
+| Wednesday | 2:00 PM ET | [Steve Lorello][steve]  | [Coding with Steve][twitch]                                      |
+|  Friday   | 2:00 PM ET | [Guy Royse][guy]        | [Web, Whimsy, and Redis Stack: Random Projects with Guy][twitch] |
 
   </TabItem>
   <TabItem value="past">
@@ -50,14 +54,14 @@ Past events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                    |
 | :------------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
-|   Friday, July 15    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
+|   Friday, July 15    | 6:00 PM UTC | [Guy Royse][guy]                                      | [Exploring Bun and Node Redis][3]                       |
 |  Thursday, July 14   | 3:00 PM UTC | [Simon Prickett][simon]                               | Introduction to Redis Streams with RedisInsight         |
-|  Wednesday, July 13  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
+|  Wednesday, July 13  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                            |
 |    Friday, July 8    | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                 |
 |   Thursday, July 7   | 2:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU202 Redis Streams Course      |
-|  Wednesday, July 6   | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET                            |
+|  Wednesday, July 6   | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                            |
 |  Thursday, June 30   | 6:00 PM UTC | [Savannah Norem][norem], [Guy Royse][guy]             | Comparing Sets, Bloom Filters, and Cuckoo Filters       |
-|  Wednesday, June 29  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET!                           |
+|  Wednesday, June 29  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET!                           |
 |   Tuesday, June 28   | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102J Redis University Course  |
 |   Friday, June 24    | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                 |
 |  Thursday, June 23   | 6:00 PM UTC | [Justin Castilla][justin], [Savannah Norem][norem]    | [Redis OM: Python + JSON + Search][2]                   |
@@ -85,5 +89,6 @@ Past events:
 [yt]: https://www.youtube.com/redisinc
 
 <!-- Links to specific videos -->
+[3]: https://www.youtube.com/watch?v=aWJ9mfmHqfw
 [2]: https://www.youtube.com/watch?v=ZP2j7bmWfmU
 [1]: https://www.youtube.com/watch?v=FAJXq5Qqc0Y
