Adds next Friday's OS contribution stream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -29,6 +29,7 @@ Check out our upcoming events:
 |   Tuesday, July 26   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 |  Wednesday, July 27  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on cli.redis.io                                        |
 |  Thursday, July 28   | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with RU203: Querying, Indexing and Full-Text Search |
+|   Friday, July 29    | 4:00 PM UTC | [Savannah Norem][norem]                               | First Steps to Open Source Contribution                            |
 |   Friday, July 29    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
 |  Tuesday, August 2   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
