--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -30,7 +30,7 @@ Check out our upcoming events:
 |   Friday, July 29    | 4:00 PM UTC | [Savannah Norem][norem], [Simon Prickett][simon]      | First Steps to Open Source Contribution                            |
 |   Friday, July 29    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
 |  Tuesday, August 2   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
-| Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
+| Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                                       |
 |  Tuesday, August 9   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
 |  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
@@ -53,7 +53,6 @@ Past events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                    |
 | :------------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
-|   Friday, July 22    | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy  |
 |  Wednesday, July 20  | 6:00 PM UTC | [Steve Lorello][steve]                                | [Steve Works on cli.redis.io][4]                        |
 |   Friday, July 15    | 6:00 PM UTC | [Guy Royse][guy]                                      | [Exploring Bun and Node Redis][3]                       |
 |  Thursday, July 14   | 3:00 PM UTC | [Simon Prickett][simon]                               | Introduction to Redis Streams with RedisInsight         |
