--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -51,26 +51,26 @@ Sometimes we're on the road speaking at in-person events or enjoying a well dese
 
 Past events:
 
-|        Date          |    Time     | Streamers                                             | Show                                                    |
-| :------------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
-|  Wednesday, July 20  | 6:00 PM UTC | [Steve Lorello][steve]                                | [Steve Works on cli.redis.io][4]                        |
-|   Friday, July 15    | 6:00 PM UTC | [Guy Royse][guy]                                      | [Exploring Bun and Node Redis][3]                       |
-|  Thursday, July 14   | 3:00 PM UTC | [Simon Prickett][simon]                               | Introduction to Redis Streams with RedisInsight         |
-|  Wednesday, July 13  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                            |
-|    Friday, July 8    | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                 |
-|   Thursday, July 7   | 2:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU202 Redis Streams Course      |
-|  Wednesday, July 6   | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                            |
-|  Thursday, June 30   | 6:00 PM UTC | [Savannah Norem][norem], [Guy Royse][guy]             | Comparing Sets, Bloom Filters, and Cuckoo Filters       |
-|  Wednesday, June 29  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET!                           |
-|   Tuesday, June 28   | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102J Redis University Course  |
-|   Friday, June 24    | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                 |
-|  Thursday, June 23   | 6:00 PM UTC | [Justin Castilla][justin], [Savannah Norem][norem]    | [Redis OM: Python + JSON + Search][2]                   |
-|  Thursday, June 16   | 3:00 PM UTC | [Simon Prickett][simon], [Justin Castilla][justin]    | [Counting Things At Scale with Redis][1]                |
-|  Wednesday, June 15  | 5:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102JS Redis University Course |
-|  Wednesday, June 15  | 4:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102PY Redis University Course |
-|   Friday, June 10    | 6:00 PM UTC | [Guy Royse][guy]                                      | Working on Redis OM for Node.js                         |
-|   Friday, June 10    | 3:00 PM UTC | [Justin Castilla][justin], [Suze Shardlow][suze]      | Working with Redis Data Structures                      |
-|    Friday, June 3    | 6:00 PM UTC | [Guy Royse][guy]                                      | Tracking Aircraft with Redis + Software-Defined Radio   |
+|        Date          |    Time     | Streamers                                             | Show                                                                     |
+| :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------------- |
+|  Wednesday, July 20  | 6:00 PM UTC | [Steve Lorello][steve]                                | [Steve Works on cli.redis.io][4]                                         |
+|   Friday, July 15    | 6:00 PM UTC | [Guy Royse][guy]                                      | [Exploring Bun and Node Redis][3]                                        |
+|  Thursday, July 14   | 3:00 PM UTC | [Simon Prickett][simon]                               | [Introduction to Redis Streams with RedisInsight, Node and Python][5]    |
+|  Wednesday, July 13  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                                             |
+|    Friday, July 8    | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                                  |
+|   Thursday, July 7   | 2:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU202 Redis Streams Course                       |
+|  Wednesday, July 6   | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                                             |
+|  Thursday, June 30   | 6:00 PM UTC | [Savannah Norem][norem], [Guy Royse][guy]             | Comparing Sets, Bloom Filters, and Cuckoo Filters                        |
+|  Wednesday, June 29  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET!                                            |
+|   Tuesday, June 28   | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102J Redis University Course                   |
+|   Friday, June 24    | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph                                                  |
+|  Thursday, June 23   | 6:00 PM UTC | [Justin Castilla][justin], [Savannah Norem][norem]    | [Redis OM: Python + JSON + Search][2]                                    |
+|  Thursday, June 16   | 3:00 PM UTC | [Simon Prickett][simon], [Justin Castilla][justin]    | [Counting Things At Scale with Redis][1]                                 |
+|  Wednesday, June 15  | 5:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102JS Redis University Course                  |
+|  Wednesday, June 15  | 4:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102PY Redis University Course                  |
+|   Friday, June 10    | 6:00 PM UTC | [Guy Royse][guy]                                      | Working on Redis OM for Node.js                                          |
+|   Friday, June 10    | 3:00 PM UTC | [Justin Castilla][justin], [Suze Shardlow][suze]      | Working with Redis Data Structures                                       |
+|    Friday, June 3    | 6:00 PM UTC | [Guy Royse][guy]                                      | Tracking Aircraft with Redis + Software-Defined Radio                    |
 
   </TabItem>
 </Tabs>
@@ -89,6 +89,7 @@ Past events:
 [yt]: https://www.youtube.com/redisinc
 
 <!-- Links to specific videos -->
+[5]: https://www.youtube.com/watch?v=q2UOkQmIo9Q
 [4]: https://www.youtube.com/watch?v=LV2Ax0Y8Kxk
 [3]: https://www.youtube.com/watch?v=aWJ9mfmHqfw
 [2]: https://www.youtube.com/watch?v=ZP2j7bmWfmU
