--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -1,9 +1,9 @@
 ---
-id: index-hacktoberfest
-title: Hacktoberfest 2021 at Redis
-sidebar_label: Start Here
-slug: /hacktoberfest/
-authors: [suze, simon]
+id: index-redis-insiders
+title: Redis Insiders: our ambassador programme
+sidebar_label: Home
+slug: /redis-insiders/
+authors: [suze]
 custom_edit_url: null
 pagination_next: null
 pagination_prev: null
