Removes the punctuation in the front matter and the tags in the body.

--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redis-insiders
-title: Redis Insiders: our ambassador program
+title: Redis Insiders, our ambassador program
 sidebar_label: Home
 slug: /redis-insiders/
 authors: [suze]
@@ -19,24 +19,24 @@ Our current Insiders are...
 
 ### Name 1
 
-<bio>
-<photo>
-<link to page>
+bio
+photo
+link to page
 
 ### Name 2
 
-<bio>
-<photo>
-<link to page>
+bio
+photo
+link to page
 
 ### Name 3
 
-<bio>
-<photo>
-<link to page>
+bio
+photo
+link to page
 
 ### Name 4
 
-<bio>
-<photo>
-<link to page>
+bio
+photo
+link to page
