Adds Jyotsna's bio.

--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redis-insiders
 title: Redis Insiders, our ambassador program
-sidebar_label: Home
+sidebar_label: Redis Insiders
 slug: /redis-insiders/
 authors: [suze]
 custom_edit_url: null
@@ -17,13 +17,15 @@ Our Redis Insiders are enthusiastic community members who love using Redis, and 
 
 Our current Insiders are...
 
-### Name 1
+### Jyotsna Gupta
 
-bio
+Jyotsna is based in Bangalore, India and works as a Senior Software Engineer at Gojek (GoPay).  She is an open source enthusiast and has been using Redis for the past three years, with Golang and Java.  She applied to become a Redis Insider because she is passionate about communities and loves to share and learn together.  When she’s not working or volunteering, she energises herself by playing badminton, table tennis, basketball, Carrom and chess.
+
 photo
+
 link to page
 
-### Name 2
+### Moiz Kapasi
 
 bio
 photo
