--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -27,8 +27,10 @@ link to page
 
 ### Moiz Kapasi
 
-bio
+Moiz Kapasi is a Paris, France-based Solution Architect at Capgemini who builds apps in the enterprise landscape of a major European car manufacturer, using Java / J2EE.  Moiz was drawn to the Redis Insiders program because, since he started using Redis 1.5 years ago, the simplicity and power of Redis has fascinated him.  His hobbies include cycling along the River Seine, camping, reading classic literature and philately.
+
 photo
+
 link to page
 
 ### Name 3
