Adds Michael's bio.

--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -33,10 +33,12 @@ photo
 
 link to page
 
-### Name 3
+### Michael Owolabi
 
-bio
+Michael is a Senior Software Engineer at Spleet, from Lagos, Nigeria.  He is a JavaScript programmer and has been using Redis for more than two years.  In his spare time, Michael enjoys travelling, adventure, writing, and volunteering.  Michael applied to become a Redis Insider because as a lover of Redis himself, he wanted an opportunity to meet with and learn from other Redis professionals around the globe and also share his knowledge of Redis through speaking and writing.
+
 photo
+
 link to page
 
 ### Name 4
