Adds Stevan's bio.

--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -41,8 +41,10 @@ photo
 
 link to page
 
-### Name 4
+### Stevan Thomas
 
-bio
+Stevan is a Senior Software Engineer at Vela, with five years of Redis experience.  He builds web, mobile and desktop apps for a variety of industries including shipping / logistics, finance, retail and health using JavaScript, Swift, Java, C# and Python.  Stevan lives in Port of Spain, Trinidad and Tobago and, in his spare time, enjoys hiking, fitness / CrossFit, watching movies and learning new technologies.  He is excited to join the Redis Insiders program because he wants to be a positive influence in the adoption of Redis as a primary database for developers.
+
 photo
+
 link to page
