Amends the slug for Jyotsna's page.

--- a/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
+++ b/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
@@ -2,7 +2,7 @@
 id: index-jyotsna-gupta
 title: Jyotsna Gupta, Redis Insider
 sidebar_label: Jyotsna Gupta
-slug: /jyotsna-gupta/
+slug: /redis-insiders/jyotsna-gupta/
 authors: [suze]
 custom_edit_url: null
 ---
