--- a/docs/get-involved/redis-insiders/stevan-thomas/index-stevan-thomas.mdx
+++ b/docs/get-involved/redis-insiders/stevan-thomas/index-stevan-thomas.mdx
@@ -5,4 +5,5 @@ sidebar_label: Stevan Thomas
 slug: /redis-insiders/stevan-thomas/
 authors: [suze]
 custom_edit_url: null
+pagination_next: null
 ---
