Updates Simon's job title.

--- a/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
+++ b/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
@@ -18,7 +18,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
     allowfullscreen></iframe>
 </div>
 
-Welcome to the Node.js Redis Crash Course. I'm [Simon Prickett](https://twitter.com/simon_prickett), Developer Advocacy Manager at Redis.
+Welcome to the Node.js Redis Crash Course. I'm [Simon Prickett](https://twitter.com/simon_prickett), Principal Developer Advocate at Redis.
 
 In this course, you'll learn about using Redis with Node.js through a blend of video and text-based training. You can also get hands-on with some optional workshop exercises where you'll add new functionality to an existing Node.js application.
 
