Adds a link from the landing page to Jyotsna's page.

--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -26,7 +26,8 @@ Our current Insiders are...
 
 Jyotsna is based in Bangalore, India and works as a Senior Software Engineer at Gojek (GoPay).  She is an open source enthusiast and has been using Redis for the past three years, with Golang and Java.  She applied to become a Redis Insider because she is passionate about communities and loves to share and learn together.  When she’s not working or volunteering, she energises herself by playing badminton, table tennis, basketball, Carrom and chess.
 
-link to page
+[Find out more about Jyotsna.](./jyotsna-gupta/)
+
 <div style={{clear: "left"}}></div>
 
 ### Moiz Kapasi
