Adds a link from the landing page to Michael's page.

--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -45,7 +45,8 @@ link to page
 
 Michael is a Senior Software Engineer at Spleet, from Lagos, Nigeria.  He is a JavaScript programmer and has been using Redis for more than two years.  In his spare time, Michael enjoys travelling, adventure, writing, and volunteering.  Michael applied to become a Redis Insider because as a lover of Redis himself, he wanted an opportunity to meet with and learn from other Redis professionals around the globe and also share his knowledge of Redis through speaking and writing.
 
-link to page
+[Find out more about Michael.](./michael-owolabi/)
+
 <div style={{clear: "left"}}></div>
 
 ### Stevan Thomas
