Adds a link from the landing page to Moiz' page.

--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -36,7 +36,8 @@ Jyotsna is based in Bangalore, India and works as a Senior Software Engineer at 
 
 Moiz Kapasi is a Paris, France-based Solution Architect at Capgemini who builds apps in the enterprise landscape of a major European car manufacturer, using Java / J2EE.  Moiz was drawn to the Redis Insiders program because, since he started using Redis 1.5 years ago, the simplicity and power of Redis has fascinated him.  His hobbies include cycling along the River Seine, camping, reading classic literature and philately.
 
-link to page
+[Find out more about Moiz.](./moiz-kapasi/)
+
 <div style={{clear: "left"}}></div>
 
 ### Michael Owolabi
