--- a/docs/get-involved/redis-insiders/index-redis-insiders.mdx
+++ b/docs/get-involved/redis-insiders/index-redis-insiders.mdx
@@ -56,5 +56,6 @@ Michael is a Senior Software Engineer at Spleet, from Lagos, Nigeria.  He is a J
 
 Stevan is a Senior Software Engineer at Vela, with five years of Redis experience.  He builds web, mobile and desktop apps for a variety of industries including shipping / logistics, finance, retail and health using JavaScript, Swift, Java, C# and Python.  Stevan lives in Port of Spain, Trinidad and Tobago and, in his spare time, enjoys hiking, fitness / CrossFit, watching movies and learning new technologies.  He is excited to join the Redis Insiders program because he wants to be a positive influence in the adoption of Redis as a primary database for developers.
 
-link to page
+[Find out more about Stevan.](./stevan-thomas/)
+
 <div style={{clear: "left"}}></div>
