Added pics to individual insider pages.

--- a/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
+++ b/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
@@ -6,3 +6,12 @@ slug: /redis-insiders/jyotsna-gupta/
 authors: [suze]
 custom_edit_url: null
 ---
+import Jyotsna from "./images/insider_jyotsna_gupta.jpg"
+
+<img alt="Jyotsna Gupta headshot" src={Jyotsna} style={{float: "left", 'margin-right': "50px"}}/>
+
+Text that will wrap goes here.
+
+<div style={{clear: "left"}}></div>
+
+Text that goes the full width of the page belongs here.
