--- a/docs/get-involved/redis-insiders/michael-owolabi/index-michael-owolabi.mdx
+++ b/docs/get-involved/redis-insiders/michael-owolabi/index-michael-owolabi.mdx
@@ -6,3 +6,10 @@ slug: /redis-insiders/michael-owolabi/
 authors: [suze]
 custom_edit_url: null
 ---
+import Michael from "./images/insider_michael_owolabi.png"
+
+<img alt="Michael Owolabi headshot" src={Michael} style={{float: "left", 'margin-right': "50px"}}/>
+
+Text that will wrap goes here.
+
+<div style={{clear: "left"}}></div>
