--- a/docs/get-involved/redis-insiders/moiz-kapasi/index-moiz-kapasi.mdx
+++ b/docs/get-involved/redis-insiders/moiz-kapasi/index-moiz-kapasi.mdx
@@ -6,3 +6,10 @@ slug: /redis-insiders/moiz-kapasi/
 authors: [suze]
 custom_edit_url: null
 ---
+import Moiz from "./images/insider_moiz_kapasi.jpg"
+
+<img alt="Moiz Kapasi headshot" src={Moiz} style={{float: "left", 'margin-right': "50px"}}/>
+
+Text that will wrap goes here.
+
+<div style={{clear: "left"}}></div>
