--- a/docs/get-involved/redis-insiders/stevan-thomas/index-stevan-thomas.mdx
+++ b/docs/get-involved/redis-insiders/stevan-thomas/index-stevan-thomas.mdx
@@ -7,3 +7,10 @@ authors: [suze]
 custom_edit_url: null
 pagination_next: null
 ---
+import Stevan from "./images/insider_stevan_thomas.png"
+
+<img alt="Stevan Thomas headshot" src={Stevan} style={{float: "left", 'margin-right': "50px"}}/>
+
+Text that will wrap goes here.
+
+<div style={{clear: "left"}}></div>
