--- a/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
+++ b/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
@@ -14,4 +14,4 @@ Text that will wrap goes here.
 
 <div style={{clear: "left"}}></div>
 
-Text that goes the full width of the page belongs here.
+Jyotsna on [Twitter](https://twitter.com/imJenal/)
