Adds Jyotsna's bio.

--- a/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
+++ b/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
@@ -10,7 +10,11 @@ import Jyotsna from "./images/insider_jyotsna_gupta.jpg"
 
 <img alt="Jyotsna Gupta headshot" src={Jyotsna} style={{float: "left", 'margin-right': "50px"}}/>
 
-Text that will wrap goes here.
+"I am an Open Source Enthusiast, working as a Senior Software Engineer at Gojek (GoPay). I am based out of Bangalore, India. I have been using Redis for the last 3 years.
+
+"I applied to become a Redis Insider because I am highly passionate about communities and love to share and learn together, and I am currently trying to get the expertise in Redis at my current workplace.
+
+"Apart from my work and volunteering, I energize myself by playing badminton, table tennis, Carrom, chess and basketball. I prefer to spend most of the time in my room, else I feel to travel the world. If you don’t see me doing any of the above, then you’ll find probably find me sleeping and dreaming for hours, maybe days?"
 
 <div style={{clear: "left"}}></div>
 
