Reformats the socials section on Jyotsna's page.

--- a/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
+++ b/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
@@ -18,4 +18,6 @@ import Jyotsna from "./images/insider_jyotsna_gupta.jpg"
 
 <div style={{clear: "left"}}></div>
 
-Jyotsna on [Twitter](https://twitter.com/imJenal/)
+Find Jyotsna online at: 
+
+* [Twitter](https://twitter.com/imJenal/)
