--- a/docs/get-involved/redis-insiders/michael-owolabi/index-michael-owolabi.mdx
+++ b/docs/get-involved/redis-insiders/michael-owolabi/index-michael-owolabi.mdx
@@ -10,6 +10,10 @@ import Michael from "./images/insider_michael_owolabi.png"
 
 <img alt="Michael Owolabi headshot" src={Michael} style={{float: "left", 'margin-right': "50px"}}/>
 
-Text that will wrap goes here.
+"I am a Senior Software Engineer at Spleet and have been using Redis for 2+ years. I build software products using Node.js."
+
+"I am based in Lagos, Nigeria, and, in my spare time, I enjoy traveling, adventure, writing and volunteering.
+
+"I applied to become a Redis Insider because as a lover of Redis myself, I wanted an opportunity to meet with and learn from other Redis professionals around the globe and also share my knowledge of Redis through speaking and writing."
 
 <div style={{clear: "left"}}></div>
