--- a/docs/get-involved/redis-insiders/stevan-thomas/index-stevan-thomas.mdx
+++ b/docs/get-involved/redis-insiders/stevan-thomas/index-stevan-thomas.mdx
@@ -11,6 +11,10 @@ import Stevan from "./images/insider_stevan_thomas.png"
 
 <img alt="Stevan Thomas headshot" src={Stevan} style={{float: "left", 'margin-right': "50px"}}/>
 
-Text that will wrap goes here.
+"I am a Senior Software Engineer at Vela and have been using Redis for 5 years. I build web, mobile and desktop apps for a variety of industries including shipping / logistics, financial, retail and Hhalth using JavaScript, TypeScript, Node.js, React, Swift, Java, C# and Python.
+
+"I am based in Port of Spain, Trinidad and Tobago and, in my spare time, I enjoy hiking, fitness/CrossFit, watching movies and learning new technology.
+
+"I applied to become a Redis Insider because I want to be a positive influence in the adoption of Redis as a primary database for developers and business owners."
 
 <div style={{clear: "left"}}></div>
