Fixed image path.

--- a/docs/create/rediscloud/index-recloud.mdx
+++ b/docs/create/rediscloud/index-recloud.mdx
@@ -107,7 +107,7 @@ Click "Get specific fields" to access part of a stored JSON document as shown in
   className="link">
 
   <img
-    src="/images/launchpad.png"
+    src="/img/launchpad.png"
     className="thumb"
     loading="lazy"
     alt="Redis Launchpad"
