Adds Aug 5 2022 stream for Simon.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -25,6 +25,7 @@ Check out our upcoming events:
 |        Date          |    Time     | Streamers                                             | Show                                                               |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
 | Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                                       |
+|  Friday, August 5    | 9:30 AM UTC | [Simon Prickett][simon]                               | IoT with Redis: Introduction                                       |
 |  Tuesday, August 9   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
 |  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
